uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  type: NodePort
  ports:
  - port: 3001
    nodePort: 30010
    targetPort: http
  selector:
    app: uptime-kuma
